@@ -205,3 +205,8 @@
   - Refactored `backend/orchestrator/scheduler.py` to create a fresh async engine/session factory per invocation, avoiding cross-event-loop issues in CI runners.
   - `tests/integration/test_destination_end_to_end.py` and `tests/integration/test_sync_scheduler.py` now export `POSTGRES_*` env vars from the Testcontainers Postgres URL before invoking the scheduler, ensuring it connects to the same database as the test session.
   - When using in-memory broker in tests, call and await `scan_due_profiles_async()` directly instead of Celery `.apply()`/`.apply_async()` to avoid nested event loop errors.
+
+## 2025-08-10 (0.12.28)
+### Changed
+* `start_core_services.sh` now runs Postgres without binding the container port to the host, avoiding collisions when 5432 is already in use.
+* The script detects the container's internal IP and exports it via `POSTGRES_HOST`; `POSTGRES_PORT` is fixed at 5432. Alembic migrations are now executed against this IP, fully eliminating `connection refused` errors during startup.
